include/dss_capi.h

    /*
    Array of all energy Meter names
    */
    DSS_CAPI_DLL void Meters_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Meters_Get_AllNames but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Meters_Get_AllNames_GR(void);
    /*
    Set the first energy Meter active. Returns 0 if none.
    */
    DSS_CAPI_DLL int32_t Meters_Get_First(void);
    /*
    Get/Set the active meter  name.
    */
    DSS_CAPI_DLL char* Meters_Get_Name(void);
    /*
    Sets the next energy Meter active.  Returns 0 if no more.
    */
    DSS_CAPI_DLL int32_t Meters_Get_Next(void);
    /*
    Array of strings containing the names of the registers.
    */
    DSS_CAPI_DLL void Meters_Get_RegisterNames(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Meters_Get_RegisterNames but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Meters_Get_RegisterNames_GR(void);
    /*
    Array of all the values contained in the Meter registers for the active Meter.
    */
    DSS_CAPI_DLL void Meters_Get_RegisterValues(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as Meters_Get_RegisterValues but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Meters_Get_RegisterValues_GR(void);
    DSS_CAPI_DLL void Meters_Reset(void);
    DSS_CAPI_DLL void Meters_ResetAll(void);
    DSS_CAPI_DLL void Meters_Sample(void);
    DSS_CAPI_DLL void Meters_Save(void);
    /*
    Set a meter to be active by name.
    */
    DSS_CAPI_DLL void Meters_Set_Name(char* Value);
    /*
    Totals of all registers of all meters
    */
    DSS_CAPI_DLL void Meters_Get_Totals(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as Meters_Get_Totals but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Meters_Get_Totals_GR(void);
    /*
    Array of doubles to set values of Peak Current property
    */
    DSS_CAPI_DLL void Meters_Get_Peakcurrent(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as Meters_Get_Peakcurrent but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Meters_Get_Peakcurrent_GR(void);
    /*
    Array of doubles to set values of Peak Current property
    */
    DSS_CAPI_DLL void Meters_Set_Peakcurrent(double* ValuePtr, int32_t ValueCount);
    /*
    Set the magnitude of the real part of the Calculated Current (normally determined by solution) for the Meter to force some behavior on Load Allocation
    */
    DSS_CAPI_DLL void Meters_Get_CalcCurrent(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as Meters_Get_CalcCurrent but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Meters_Get_CalcCurrent_GR(void);
    /*
    Set the magnitude of the real part of the Calculated Current (normally determined by solution) for the Meter to force some behavior on Load Allocation
    */
    DSS_CAPI_DLL void Meters_Set_CalcCurrent(double* ValuePtr, int32_t ValueCount);
    /*
    Array of doubles: set the phase allocation factors for the active meter.
    */
    DSS_CAPI_DLL void Meters_Get_AllocFactors(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as Meters_Get_AllocFactors but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Meters_Get_AllocFactors_GR(void);
    /*
    Array of doubles: set the phase allocation factors for the active meter.
    */
    DSS_CAPI_DLL void Meters_Set_AllocFactors(double* ValuePtr, int32_t ValueCount);
    /*
    Set Name of metered element
    */
    DSS_CAPI_DLL char* Meters_Get_MeteredElement(void);
    /*
    set Number of Metered Terminal
    */
    DSS_CAPI_DLL int32_t Meters_Get_MeteredTerminal(void);
    /*
    Set Name of metered element
    */
    DSS_CAPI_DLL void Meters_Set_MeteredElement(char* Value);
    /*
    set Number of Metered Terminal
    */
    DSS_CAPI_DLL void Meters_Set_MeteredTerminal(int32_t Value);
    /*
    Global Flag in the DSS to indicate if Demand Interval (DI) files have been properly opened.
    */
    DSS_CAPI_DLL uint16_t Meters_Get_DIFilesAreOpen(void);
    DSS_CAPI_DLL void Meters_CloseAllDIFiles(void);
    DSS_CAPI_DLL void Meters_OpenAllDIFiles(void);
    DSS_CAPI_DLL void Meters_SampleAll(void);
    DSS_CAPI_DLL void Meters_SaveAll(void);
    /*
    Array of names of all zone end elements.
    */
    DSS_CAPI_DLL void Meters_Get_AllEndElements(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Meters_Get_AllEndElements but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Meters_Get_AllEndElements_GR(void);
    /*
    Number of zone end elements in the active meter zone.
    */
    DSS_CAPI_DLL int32_t Meters_Get_CountEndElements(void);
    /*
    Number of Energy Meters in the Active Circuit
    */
    DSS_CAPI_DLL int32_t Meters_Get_Count(void);
    /*
    Wide string list of all branches in zone of the active energymeter object.
    */
    DSS_CAPI_DLL void Meters_Get_AllBranchesInZone(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Meters_Get_AllBranchesInZone but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Meters_Get_AllBranchesInZone_GR(void);
    /*
    Number of branches in Active energymeter zone. (Same as sequencelist size)
    */
    DSS_CAPI_DLL int32_t Meters_Get_CountBranches(void);
    /*
    Returns SAIFI for this meter's Zone. Execute Reliability Calc method first.
    */
    DSS_CAPI_DLL double Meters_Get_SAIFI(void);
    /*
    Get/set Index into Meter's SequenceList that contains branch pointers in lexical order. Earlier index guaranteed to be upline from later index. Sets PDelement active.
    */
    DSS_CAPI_DLL int32_t Meters_Get_SequenceIndex(void);
    /*
    Get/set Index into Meter's SequenceList that contains branch pointers in lexical order. Earlier index guaranteed to be upline from later index. Sets PDelement active.
    */
    DSS_CAPI_DLL void Meters_Set_SequenceIndex(int32_t Value);
    /*
    SAIFI based on kW rather than number of customers. Get after reliability calcs.
    */
    DSS_CAPI_DLL double Meters_Get_SAIFIKW(void);
    DSS_CAPI_DLL void Meters_DoReliabilityCalc(uint16_t AssumeRestoration);
    /*
    Size of Sequence List
    */
    DSS_CAPI_DLL int32_t Meters_Get_SeqListSize(void);
    /*
    Total Number of customers in this zone (downline from the EnergyMeter)
    */
    DSS_CAPI_DLL int32_t Meters_Get_TotalCustomers(void);
    /*
    SAIDI for this meter's zone. Execute DoReliabilityCalc first.
    */
    DSS_CAPI_DLL double Meters_Get_SAIDI(void);
    /*
    Total customer interruptions for this Meter zone based on reliability calcs.
    */
    DSS_CAPI_DLL double Meters_Get_CustInterrupts(void);
    /*
    Number of feeder sections in this meter's zone
    */
    DSS_CAPI_DLL int32_t Meters_Get_NumSections(void);
    DSS_CAPI_DLL void Meters_SetActiveSection(int32_t SectIdx);
    /*
    Average Repair time in this section of the meter zone
    */
    DSS_CAPI_DLL double Meters_Get_AvgRepairTime(void);
    /*
    Sum of Fault Rate time Repair Hrs in this section of the meter zone
    */
    DSS_CAPI_DLL double Meters_Get_FaultRateXRepairHrs(void);
    /*
    Number of branches (lines) in this section
    */
    DSS_CAPI_DLL int32_t Meters_Get_NumSectionBranches(void);
    /*
    Number of Customers in the active section.
    */
    DSS_CAPI_DLL int32_t Meters_Get_NumSectionCustomers(void);
    /*
    Type of OCP device. 1=Fuse; 2=Recloser; 3=Relay
    */
    DSS_CAPI_DLL int32_t Meters_Get_OCPDeviceType(void);
    /*
    Sum of the branch fault rates in this section of the meter's zone
    */
    DSS_CAPI_DLL double Meters_Get_SumBranchFltRates(void);
    /*
    SequenceIndex of the branch at the head of this section
    */
    DSS_CAPI_DLL int32_t Meters_Get_SectSeqIdx(void);
    /*
    Total Customers downline from this section
    */
    DSS_CAPI_DLL int32_t Meters_Get_SectTotalCust(void);